--- a/index.html
+++ b/index.html
@@ -120,24 +120,69 @@
 						---
 						# 2.2 weeks
 						---
-						<div style="max-height: 80vh; height: 80vh; width: 50vw;">
-							<canvas data-chart="line" >
-								<!-- {
-									"type": "line",
-									"data": {
-										"labels": ["Before", "After"],
-										"datasets":[
-											{
-												"data":[41, 87],
-												"label":"Performance",
-												"backgroundColor":"rgba(20,220,220,.8)",
-												"borderColor":"white"
-											}
-										]
-									}
-								} 
-							-->
-							</canvas>
+						## Technical Performance 🚀
+						![LandingOverall](OverallLanding.svg)
+						---
+						## Technical Performance 🚀
+						![Performance](OverallAssessments.svg)
+						---
+						## Technical Performance 🚀
+						![Performance](LandingMetrics.svg)
+						---
+						## Technical Performance 🚀
+						![Performance](AssessmentMetrics.svg)
+						---
+						# So what?
+						---
+						## So what?
+						- We have an "exact" clone of our Meteor app
+						- We have better dev experience
+						- We have better technical performance
+						---
+						## How does this help the business?
+						---
+						<div style="text-align: left; color: #cbd5e1; font-size: 2rem;">
+							<div style="text-align: left; color: white;">After moving to SvelteKit,</div>
+							<h1 style="font-size: 18rem;">5.15%</h1>
+							<div style="font-weight: bolder;">increase in Assessment Completion Rate.</div>
+							<div style="font-size: 1.2rem; color: #94a3b8;">
+								Based on over 1000 applications conducted 28 days before and after the migration.
+							</div>
+						</div>
+						---
+						## Connecting the dots
+						- It's not just about the code
+						- It's about the experience
+						---
+						## Connecting the dots
+						- It's not just about the code
+						- It's about the experience
+						- We found an improved Business Experience moving to SvelteKit
+						---
+						## If you want to do this
+						- Prove your trickiest parts
+						- Plan for Authentication & Data Model
+						- Build your business use case
+						---
+						<h2>Questions?</h2>
+						<div style="margin-top: 16rem; display: flex; justify-content: end; margin-right: 6rem;">
+							<div style="display: flex; justify-content: space-between; align-items: center;">
+								<div style="display: flex; align-items: center;">
+									<img src="https://avatars.githubusercontent.com/u/814405?v=4" style="margin-block: 0rem; width: 3rem; align-self: flex-start; height: 3rem; border-radius: 50%; margin-right: 1rem;" />
+									<div style="display: flex; flex-direction: column; align-items: flex-start; ">
+										<div style="font-weight: bold;">Chris Ellis</div>
+										<div style="font-size: 1.5rem; color: #94a3b8; display: flex; align-items: center; padding-left: 1rem;">
+											<img src="/twitter.svg" style="width: 1.5rem; height: 1.5rem; margin-right: 0.5rem;  margin-block: 0rem;" />	
+											elliscs
+										</div>
+										<!-- linkedin -->
+										<div style="font-size: 1.5rem; color: #94a3b8; display: flex; align-items: center; padding-left: 1rem;">
+											<img src="/li.svg" style="width: 1.5rem; height: 1.5rem; margin-right: 0.5rem; margin-block: 0rem;" />	
+											chris-ellis-dev
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</textarea>
 				</section>
