--- a/index.html
+++ b/index.html
@@ -21,8 +21,31 @@
 						# Business Case for SvelteKit
 						by Chris Ellis
 						---
-						## Hey, I'm Chris
-						- I'm Sr Director of Engineering at [XtendOps](https://www.xtendops.com)
+						<h2>Hey, I'm Chris</h2>
+						
+						<p>
+							I'm Sr Director of Engineering at <a href="https://www.xtendops.com">xtendops.com</a>
+						</p>
+
+						<div style="margin-top: 16rem; display: flex; justify-content: end; margin-right: 6rem;">
+							<div style="display: flex; justify-content: space-between; align-items: center;">
+								<div style="display: flex; align-items: center;">
+									<img src="https://avatars.githubusercontent.com/u/814405?v=4" style="margin-block: 0rem; width: 3rem; align-self: flex-start; height: 3rem; border-radius: 50%; margin-right: 1rem;" />
+									<div style="display: flex; flex-direction: column; align-items: flex-start; ">
+										<div style="font-weight: bold;">Chris Ellis</div>
+										<!-- linkedin -->
+										<a href="https://www.linkedin.com/in/chris-ellis-dev" style="font-size: 1.5rem; color: #94a3b8; display: flex; align-items: center; padding-left: 1rem;">
+											<img src="li.svg" style="width: 1.5rem; height: 1.5rem; margin-right: 0.5rem; margin-block: 0rem;" />	
+											chris-ellis-dev
+										</a>
+										<a href="https://twitter.com/elliscs" style="font-size: 1.5rem; color: #94a3b8; display: flex; align-items: center; padding-left: 1rem;">
+											<img src="twitter.svg" style="width: 1.5rem; height: 1.5rem; margin-right: 0.5rem;  margin-block: 0rem;" />	
+											elliscs
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
 						---
 						## Who we are
 						- We're a Business Processes Outsourcing company
@@ -171,15 +194,15 @@
 									<img src="https://avatars.githubusercontent.com/u/814405?v=4" style="margin-block: 0rem; width: 3rem; align-self: flex-start; height: 3rem; border-radius: 50%; margin-right: 1rem;" />
 									<div style="display: flex; flex-direction: column; align-items: flex-start; ">
 										<div style="font-weight: bold;">Chris Ellis</div>
-										<div style="font-size: 1.5rem; color: #94a3b8; display: flex; align-items: center; padding-left: 1rem;">
-											<img src="/twitter.svg" style="width: 1.5rem; height: 1.5rem; margin-right: 0.5rem;  margin-block: 0rem;" />	
-											elliscs
-										</div>
 										<!-- linkedin -->
-										<div style="font-size: 1.5rem; color: #94a3b8; display: flex; align-items: center; padding-left: 1rem;">
-											<img src="/li.svg" style="width: 1.5rem; height: 1.5rem; margin-right: 0.5rem; margin-block: 0rem;" />	
+										<a href="https://www.linkedin.com/in/chris-ellis-dev" style="font-size: 1.5rem; color: #94a3b8; display: flex; align-items: center; padding-left: 1rem;">
+											<img src="li.svg" style="width: 1.5rem; height: 1.5rem; margin-right: 0.5rem; margin-block: 0rem;" />	
 											chris-ellis-dev
-										</div>
+										</a>
+										<a href="https://twitter.com/elliscs" style="font-size: 1.5rem; color: #94a3b8; display: flex; align-items: center; padding-left: 1rem;">
+											<img src="twitter.svg" style="width: 1.5rem; height: 1.5rem; margin-right: 0.5rem;  margin-block: 0rem;" />	
+											elliscs
+										</a>
 									</div>
 								</div>
 							</div>
