--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
 						- 1200 line schema...Yikes
 						- Does it build? Can I use it?
 						---
+						## Success!
+
+						![Success](success.png)
+						---
 						# Executing the Plan
 						---
 						## The Team
