--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						- How do you handle the data model in a way that is flexible, but still enforceable?
 						---
 						## Data Model
-						Prisma saves the day
+						Prisma introspection saves the day
 						```
 						npx prisma db pull
 						```
