--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="slides">
 				<section data-markdown>
 					<textarea data-template>
-						# Business Case for SvelteKit
+						# A Business Case for SvelteKit
 						by Chris Ellis
 						---
 						<h2>Hey, I'm Chris</h2>
@@ -48,12 +48,12 @@
 						</div>
 						---
 						## Who we are
-						- We're a Business Processes Outsourcing company
+						- We're a Business Processes Outsourcing Company
 						- We help companies with Customer Experience
-						- Engineering at XtendOps supports our Customer Experience and Clients
+						- Engineering at XtendOps supports our Clients and People
 						---
 						## Our Tech Stack
-						- We're a JavaScript shop
+						- We're mostly a JavaScript shop
 						- We use Svelte, Meteor, and MongoDB
 						---
 						## What we started with
@@ -62,7 +62,10 @@
 						- Meteor App has batteries included
 						- Handled authentication, devops, routing, etc.
 						---
-						![Meteor](meteor.png)
+
+							<img src="meteor.png" style="width: 80%; height: 100%; object-fit: contain;" />
+					
+
 						---
 						## What's the problem?
 						- I still love Meteor
