feat: update case

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						---
 						## Split it up
 						- Don't step on each other's toes
-						- Use Prisma Client where it makes sense, default Case
+						- Use Prisma Client where it makes sense, Default Case
 						- Use Mongo Client where it doesn't
 						---
 						## Integration
